# archer

./: .env  .travis.yml  Cargo.toml  build.rs  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: auth.rs  main.rs  messenger.rs  routes.rs
api/src/services/: batch.rs  mod.rs  transaction.rs
config/: Cargo.toml
config/src/: lib.rs
configuration/: base.yml  production.yml
database/: Cargo.toml
database/src/: lib.rs  models.rs  schema.rs
lib/: Cargo.toml
lib/src/: error.rs  lib.rs
migrations/2020-10-19-001751_create_blocks/: down.sql  up.sql
processor/: Cargo.toml  Dockerfile
processor/src/: handler.rs  main.rs  payload.rs  state.rs
protobuf/: Cargo.toml  build.rs
protobuf/src/: account.rs  lib.rs  merchant.rs  payload.rs
protos/: account.proto  merchant.proto  payload.proto
src/: bin.rs  lib.rs
src/api/: messenger.rs  mod.rs
src/api/services/: batch.rs  mod.rs  transaction.rs
src/archer/: error.rs  mod.rs
src/database/: mod.rs  models.rs  schema.rs
src/events/: mod.rs  subscriber.rs
src/processor/: handler.rs  mod.rs  payload.rs  state.rs
src/protobuf/: mod.rs  payload.rs
src/tests/: unit_tests.rs
subscriber/: Cargo.toml  Dockerfile
subscriber/src/: event_handling.rs  main.rs  subscriber.rs
