[package]
name = "sawtooth-archer-test"
version = "0.1.0"
authors = ["Alexander Charette <acharette.wake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "archer"
path = "src/lib.rs"

[[bin]]
name = "archer"
path = "src/bin.rs"

[build-dependencies]
protobuf-codegen-pure = "2.18.0"

[dependencies]
# futures-util       = "0.3.7"
log                = "0.4.11"
env_logger         = "0.8.1"
lazy_static        = "1.4.0"
protobuf           = "2.18.0"
openssl            = "0.10.30"
nanoid             = "0.3.0"
rand               = "0.7.3"
zmq                = "0.9.2"
rust-crypto        = "0.2.36"
regex              = "1.4.1"
sawtooth-sdk       = "0.5.0"
reqwest            = "0.10.8"
actix-web          = "3.2.0"
config             = "0.10.1"
serde              = "1.0.117"
serde_json         = "1.0.59"
serde_cbor         = "0.11.1"
tracing            = "0.1.21"
tracing-subscriber = { version = "0.2.13", features = ["env-filter"] }
diesel             = { version = "1.4.5",  features = ["postgres", "r2d2"] }
dotenv             = "0.15.0"





# Smart contract dependencies

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# rust-crypto-wasm = "0.3.1"
# sabre-sdk = "0.6.0"

# Transaction processor dependencies

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# rust-crypto = "0.2.36"
# sawtooth-sdk = "0.5.0"
# rustc-serialize = "0.3.24"
# log = "0.4.11"
# log4rs = "0.13.0"
