[package]
name = "api"
version = "0.1.0"
authors = ["Alexander Charette <acharette.wake@gmail.com>"]
edition = "2018"

[dependencies]
archer = { path = "../lib" }
archer-config = { path = "../config" }
archer-protobuf = { path = "../protobuf" }
database = { path = "../database" }
actix-rt = "1.1.1"
actix-web = "3.2.0"
actix-web-httpauth = "0.5.0"
alcoholic_jwt = "1.0.0"
bcrypt = "0.9.0"
chrono = "0.4.19"
openssl = "0.10.30"
protobuf = "2.18.1"
rand = "0.7.3"
ring = "0.16.16"
sawtooth-sdk = "0.5.0"
serde = "1.0.117"
tracing = "0.1.21"
tracing-actix-web = "0.2.1"

[dependencies.reqwest]
version = "0.10.9"
features = ["json"]
