[package]
name = "database"
version = "0.1.0"
authors = ["Alexander Charette <acharette.wake@gmail.com>"]
edition = "2018"

[dependencies]
archer-config = { path = "../config" }
dotenv = "0.15.0"
serde = "1.0.117"
chrono = "0.4.19"

[dependencies.diesel]
version = "1.4.5"
features = ["chrono", "postgres", "r2d2"]
