[package]
name = "archer-processor"
version = "0.1.0"
authors = ["Alexander Charette <acharette.wake@gmail.com>"]
edition = "2018"

[dependencies]
archer = { path = "../lib" }
archer-protobuf = { path = "../protobuf" }
archer-config = { path = "../config" } 
log = "0.4.11"
protobuf = "2.18.1"
sawtooth-sdk = "0.5.0"
