[package]
name = "archer-subscriber"
version = "0.1.0"
authors = ["Alexander Charette <acharette.wake@gmail.com>"]
edition = "2018"

[dependencies]
archer = { path = "../lib" }
archer-protobuf = { path = "../protobuf" }
archer-config = { path = "../config" }
database = { path = "../database" }
chrono = "0.4.19"
ctrlc = "3.1.7"
lazy_static = "1.4.0"
log = "0.4.11"
protobuf = "2.18"
regex = "1.4.2"
sawtooth-sdk = "0.5.0"
structopt = "0.3.20"
zmq = "0.9.2"

[dependencies.diesel]
version = "1.4.5"
features = ["postgres"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]
